<resources>
    <string name="app_name">Ghost</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Login">Login</string>
    <string name="LogOut">Log Out</string>
    <string name="Choose">Choose</string>
    <string name="Upload">Upload</string>
    <string name="Phone_No">Phone No</string>
    <string name="Password">Password</string>
    <string name="CapturedImage">Captured Image Here</string>
    <string name="landmark">Landmark</string>
</resources>
